@@ -1,0 +1,8 @@
+fileFormatVersion: 2
+guid: 8dc47167b75100e45a13bf9b28d4851b
+timeCreated: 1506337245
+licenseType: Free
+TextScriptImporter:
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
