@@ -1,0 +1,8 @@
+fileFormatVersion: 2
+guid: 37f5b76693107eb42b71b0df69408ea3
+timeCreated: 1506337245
+licenseType: Free
+TextScriptImporter:
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
