@@ -3,12 +3,15 @@ TODO:
 	show MIDI length in seconds.
 	TextTrackWriter
 	FingeringNavigator
-		wrist crowd punish
 		extend & squeeze costs
+		omit keys punish, consider note significance
 
 
 
 2017.9.25	K.L.	<k.l.lambda@gmail.com>
+
+	+	Pianist/FingeringNavigator: added multiple fingers cost.
+	+	Pianist/FingeringNavigator: added wrist crowd cost.
 
 	+	Pianist/FingeringNavigator: added finger soft move interval cost.
 
